--- a/src/main/resources/META-INF/resources/index.xhtml
+++ b/src/main/resources/META-INF/resources/index.xhtml
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <h:html xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h = "http://xmlns.jcp.org/jsf/html"
-        xmlns:f = "http://xmlns.jcp.org/jsf/core"
-        xmlns:p = "http://primefaces.org/ui">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f = "http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Gestion de Biblioteca📚</title>
-        <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css"/>
-        <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/themes/primeone-dark.css"/>
+        <title>Gestión de Biblioteca📚</title>
+        <style>
+            .menu-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                height: 100vh;
+                gap: 20px;
+            }
+            .menu-button {
+                padding: 15px 30px;
+                font-size: 18px;
+                width: 200px;
+            }
+        </style>
     </h:head>
     <h:body>
-        
+        <div class="menu-container">
+            <h1>Bienvenido al Sistema de Gestión de Bibliotecas</h1>
+            <h:form>
+                <p:commandButton value="Gestión de Autores" action="#{indexController.irAutores}" 
+                               class="menu-button"/>
+                <p:commandButton value="Gestión de Libros" action="#{indexController.irALibros}" 
+                               class="menu-button"/>
+                <p:commandButton value="Gestión de Ubicaciones" action="#{indexController.irAUbicaciones}" 
+                               class="menu-button"/>
+                <p:commandButton value="Gestión de Géneros" action="#{indexController.irAGeneros}" 
+                               class="menu-button"/>
+            </h:form>
+        </div>
     </h:body>
+</h:html>
